// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Switch renders switch when disabled 1`] = `
<div class="o-switch o-switch--disabled normal">
  <div class="o-switch__show"></div>
</div>
`;

exports[`Switch renders switch when passed 1`] = `
<div class="o-switch o-switch--checked normal">
  <div class="o-switch__show"></div>
</div>
`;
